--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@astrojs/mdx": "^4.2.3",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.3.0",
+    "@tailwindcss/vite": "^4.1.3",
     "astro": "^5.6.1"
   }
 }
